--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "ghostwriter/wip",
+    "name": "ghostwriter/plex",
     "description": "Here be dragons",
     "license": "BSD-3-Clause",
     "type": "library",
     "keywords": [
         "ghostwriter",
-        "wip"
+        "plex"
     ],
     "authors": [
         {
@@ -15,13 +15,13 @@
             "role": "Developer"
         }
     ],
-    "homepage": "https://github.com/ghostwriter/wip",
+    "homepage": "https://github.com/ghostwriter/plex",
     "support": {
-        "issues": "https://github.com/ghostwriter/wip/issues",
-        "forum": "https://github.com/ghostwriter/wip/discussions",
-        "source": "https://github.com/ghostwriter/wip",
-        "docs": "https://github.com/ghostwriter/wip",
-        "rss": "https://github.com/ghostwriter/wip/releases.atom"
+        "issues": "https://github.com/ghostwriter/plex/issues",
+        "forum": "https://github.com/ghostwriter/plex/discussions",
+        "source": "https://github.com/ghostwriter/plex",
+        "docs": "https://github.com/ghostwriter/plex",
+        "rss": "https://github.com/ghostwriter/plex/releases.atom"
     },
     "funding": [
         {
@@ -30,18 +30,18 @@
         }
     ],
     "require": {
-        "php": ">=8.1,<8.3",
-        "ghostwriter/collection": "^0.5.1",
-        "ghostwriter/container": "^1.0.0",
-        "ghostwriter/event-dispatcher": "^1.0.0",
-        "ghostwriter/json": "^1.0.0",
-        "ghostwriter/option": "^1.0.1",
-        "ghostwriter/result": "^1.0.1"
+        "php": ">=8.0,<8.3",
+        "ghostwriter/collection": "^0.5",
+        "ghostwriter/container": "^1.0",
+        "ghostwriter/event-dispatcher": "^1.0",
+        "ghostwriter/json": "^1.0",
+        "ghostwriter/option": "^1.0",
+        "ghostwriter/result": "^1.0"
     },
     "require-dev": {
         "infection/infection": "^0.26.15",
         "nikic/php-parser": "^4.15.1",
-        "phpbench/phpbench": "^1.2.6",
+        "phpbench/phpbench": "^1.2",
         "phpunit/phpunit": "^9.5.25",
         "psalm/plugin-phpunit": "^0.17.0",
         "rector/rector": "^0.14.5",
@@ -53,21 +53,16 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Ghostwriter\\wip\\": "src/"
-        },
-        "files": [
-            "src/constants.php",
-            "src/functions.php"
-        ]
+            "Ghostwriter\\Plex\\": "src/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "Ghostwriter\\wip\\Tests\\": "tests/"
+            "Ghostwriter\\Plex\\Tests\\": "tests/"
         }
     },
     "bin": [
-        "bin/my-other-script",
-        "bin/my-script"
+        "bin/plex"
     ],
     "config": {
         "allow-plugins": {
