--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <psalm
     errorLevel="1"
+    findUnusedCode="true"
+    findUnusedBaselineEntry="true"
     findUnusedPsalmSuppress="true"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns="https://getpsalm.org/schema/config"
