--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,7 +15,7 @@
          testdox="true"
          colors="true">
     <testsuites>
-        <testsuite name="Test Suite">
+        <testsuite name="Syntax Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
