--- a/composer.json
+++ b/composer.json
@@ -34,12 +34,12 @@
         }
     ],
     "require": {
-        "php": ">=8.1,<8.3",
-        "ghostwriter/collection": "^1.3",
+        "php": ">=8.1 <8.3",
+        "ghostwriter/collection": "^1.3.1",
         "ghostwriter/container": "^1.5",
-        "ghostwriter/event-dispatcher": "^1.4",
+        "ghostwriter/event-dispatcher": "^1.4.1",
         "ghostwriter/json": "^1.1",
-        "ghostwriter/option": "^1.4",
+        "ghostwriter/option": "^1.5",
         "ghostwriter/result": "^1.2"
     },
     "require-dev": {
