--- a/infection.json.dist
+++ b/infection.json.dist
@@ -14,9 +14,12 @@
     },
     "timeout": 10,
     "logs": {
+        "stryker": {
+            "report": "/.*?/"
+        },
         "text": "php:\/\/stderr",
         "github": true
     },
-    "minMsi": 100,
-    "minCoveredMsi": 100
+    "minMsi": 0,
+    "minCoveredMsi": 0
 }
