--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -16,8 +16,6 @@
             <directory name=".github"/>
             <directory name="tests"/>
             <directory name="vendor"/>
-            <file name="ecs.php"/>
-            <file name="rector.php"/>
         </ignoreFiles>
     </projectFiles>
     <issueHandlers>
@@ -28,6 +26,6 @@
         </MissingConstructor>
     </issueHandlers>
     <plugins>
-        <pluginClass class="Psalm\PhpUnitPlugin\Plugin"/>
+        <pluginClass class="Ghostwriter\PsalmPlugin\Plugin"/>
     </plugins>
 </psalm>
