--- a/composer.json
+++ b/composer.json
@@ -34,16 +34,17 @@
         }
     ],
     "require": {
-        "php": ">=8.1 <8.4",
-        "ghostwriter/collection": "^1.3.2",
+        "php": ">=8.1",
+        "ghostwriter/collection": "^1.4",
         "ghostwriter/container": "^1.6",
-        "ghostwriter/event-dispatcher": "^1.4.2",
+        "ghostwriter/event-dispatcher": "^1.4",
         "ghostwriter/json": "^1.1",
-        "ghostwriter/option": "^1.5.1",
+        "ghostwriter/option": "^1.5",
         "ghostwriter/result": "^1.3"
     },
     "require-dev": {
-        "ghostwriter/coding-standard": "dev-main"
+        "ghostwriter/coding-standard": "dev-main",
+        "ghostwriter/psalm-plugin": "^0.1 || ^0.2 || ^1.0"
     },
     "replace": {},
     "minimum-stability": "stable",
@@ -59,13 +60,9 @@
         }
     },
     "bin": [
-        "bin/plex"
+        "bin/syntax"
     ],
     "config": {
-        "allow-plugins": {
-            "infection/extension-installer": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
-        },
         "classmap-authoritative": true,
         "discard-changes": true,
         "optimize-autoloader": true,
@@ -76,45 +73,37 @@
     },
     "scripts": {
         "cache:clear": [
-            "rm -fr ./.cache"
+            "rm -fr .cache"
         ],
         "check": [
+            "@composer update",
+            "@cache:clear",
             "@composer validate",
-            "@normalizer",
-            "@cs-check",
-            "@cs-fix",
-            "@test",
+            "@composer-normalize",
+            "@test"
+        ],
+        "composer-normalize": "vendor/ghostwriter/coding-standard/tools/composer-normalize --no-check-lock",
+        "infection": [
+            "@xdebug",
+            "vendor/ghostwriter/coding-standard/tools/infection --verbose"
+        ],
+        "phpbench": "vendor/ghostwriter/coding-standard/tools/phpbench run --report='extends:aggregate,cols:[benchmark,subject,revs,its,mem_peak,mode,rstdev]' --time-unit=milliseconds",
+        "phpunit": "vendor/ghostwriter/coding-standard/tools/phpunit --colors=always --do-not-cache-result",
+        "psalm": [
+            "@psalm:shepherd",
             "@psalm:security",
-            "@rector:dry-run",
             "@psalm:dry-run"
         ],
-        "cs-check": "vendor/bin/ecs check --clear-cache || true",
-        "cs-fix": "vendor/bin/ecs check --fix --clear-cache",
-        "infection": [
-            "@putenv XDEBUG_MODE=coverage",
-            "vendor/bin/infection --verbose"
-        ],
-        "missing-returntypes": "psalm --alter --issues=MissingReturnType",
-        "normalizer": "composer normalize --no-check-lock",
-        "phpunit": "phpunit --colors=always --testdox --stop-on-failure",
-        "psalm": "@psalm:shepherd",
-        "psalm:baseline": "psalm --set-baseline=psalm-baseline.xml",
-        "psalm:dry-run": "psalm --alter --issues=all --dry-run",
-        "psalm:missing": "psalm --alter --issues=MissingReturnType",
-        "psalm:security": "psalm --taint-analysis",
-        "psalm:shepherd": "psalm --shepherd --stats --no-diff --no-cache",
-        "rector": "vendor/bin/rector process",
-        "rector:dry-run": "vendor/bin/rector process --dry-run || true",
+        "psalm:baseline": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --no-diff --set-baseline=psalm-baseline.xml",
+        "psalm:dry-run": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --alter --allow-backwards-incompatible-changes=false --issues=all  --dry-run",
+        "psalm:fix": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache  --alter --allow-backwards-incompatible-changes=false --issues=MissingReturnType,InvalidReturnType,MismatchingDocblockParamType,LessSpecificReturnType,MissingClosureReturnType,UnnecessaryVarAnnotation,UnusedVariable,MissingParamType",
+        "psalm:missing": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --alter --allow-backwards-incompatible-changes=false --issues=MissingReturnType",
+        "psalm:security": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --no-diff --taint-analysis",
+        "psalm:shepherd": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --no-diff --shepherd --stats",
         "test": [
             "@xdebug",
             "@phpunit",
-            "@psalm",
-            "@infection"
-        ],
-        "test:coverage": [
-            "@cache:clear",
-            "@xdebug",
-            "@phpunit"
+            "@psalm"
         ],
         "xdebug": [
             "@putenv XDEBUG_MODE=coverage"
