--- a/infection.json.dist
+++ b/infection.json.dist
@@ -1,5 +1,8 @@
 {
     "$schema": "vendor/infection/infection/resources/schema.json",
+    "phpUnit": {
+        "customPath": "vendor/ghostwriter/coding-standard/tools/phpunit"
+    },
     "source": {
         "directories": [
             "src"
