--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     },
     "require-dev": {
         "ghostwriter/coding-standard": "dev-main",
-        "ghostwriter/psalm-plugin": "^0.1 || ^0.2 || ^1.0"
+        "ghostwriter/psalm-plugin": "^0 || ^1.0"
     },
     "replace": {},
     "minimum-stability": "stable",
@@ -66,6 +66,9 @@
         "classmap-authoritative": true,
         "discard-changes": true,
         "optimize-autoloader": true,
+        "platform": {
+            "php": "8.1.999"
+        },
         "preferred-install": "dist",
         "prepend-autoloader": true,
         "process-timeout": 5000,
