--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,49 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.3/phpunit.xsd"
-        beStrictAboutChangesToGlobalState="true"
-        beStrictAboutCoverageMetadata="true"
-        beStrictAboutOutputDuringTests="true"
-        beStrictAboutTestsThatDoNotTestAnything="true"
-        beStrictAboutTodoAnnotatedTests="true"
-        bootstrap="vendor/autoload.php"
-        cacheDirectory=".cache/phpunit"
-        cacheResult="false"
-        colors="true"
-        displayDetailsOnIncompleteTests="true"
-        displayDetailsOnSkippedTests="true"
-        displayDetailsOnTestsThatTriggerDeprecations="true"
-        displayDetailsOnTestsThatTriggerErrors="true"
-        displayDetailsOnTestsThatTriggerNotices="true"
-        displayDetailsOnTestsThatTriggerWarnings="true"
-        executionOrder="depends,defects"
-        failOnEmptyTestSuite="true"
-        failOnIncomplete="true"
-        failOnRisky="true"
-        failOnSkipped="true"
-        failOnWarning="true"
-        requireCoverageMetadata="true"
-        testdox="true"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/11.2/phpunit.xsd"
+    beStrictAboutChangesToGlobalState="true"
+    beStrictAboutCoverageMetadata="true"
+    beStrictAboutOutputDuringTests="true"
+    beStrictAboutTodoAnnotatedTests="true"
+    bootstrap="vendor/autoload.php"
+    cacheDirectory=".cache/phpunit"
+    cacheResult="false"
+    colors="true"
+    displayDetailsOnIncompleteTests="true"
+    displayDetailsOnSkippedTests="true"
+    displayDetailsOnTestsThatTriggerDeprecations="true"
+    displayDetailsOnTestsThatTriggerErrors="true"
+    displayDetailsOnTestsThatTriggerNotices="true"
+    displayDetailsOnTestsThatTriggerWarnings="true"
+    executionOrder="depends,defects"
+    failOnDeprecation="true"
+    failOnEmptyTestSuite="true"
+    failOnIncomplete="true"
+    failOnNotice="true"
+    failOnRisky="true"
+    failOnSkipped="true"
+    failOnWarning="true"
+    requireCoverageMetadata="true"
+    stopOnFailure="true"
 >
     <coverage>
         <report>
-            <html outputDirectory=".cache/phpunit/coverage-html"/>
-            <clover outputFile=".cache/phpunit/clover.xml"/>
-            <text outputFile=".cache/phpunit/coverage.txt"/>
+            <html outputDirectory=".cache/phpunit/coverage-html" />
+            <clover outputFile=".cache/phpunit/clover.xml" />
+            <text outputFile=".cache/phpunit/coverage.txt" />
         </report>
     </coverage>
-    <logging>
-        <junit outputFile=".cache/phpunit/report.junit.xml"/>
-    </logging>
-    <source restrictDeprecations="true" restrictNotices="true" restrictWarnings="true">
+    <source ignoreIndirectDeprecations="true" restrictNotices="true" restrictWarnings="true">
         <include>
             <directory>src</directory>
         </include>
     </source>
     <testsuites>
-        <testsuite name="Test Suite">
+        <testsuite name="default">
             <directory>tests</directory>
+            <exclude>tests/Fixture</exclude>
         </testsuite>
     </testsuites>
 </phpunit>
