--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "forum": "https://github.com/ghostwriter/syntax/discussions",
         "source": "https://github.com/ghostwriter/syntax",
         "docs": "https://github.com/ghostwriter/syntax",
-        "rss": "https://github.com/ghostwriter/syntax/releases.atom"
+        "rss": "https://github.com/ghostwriter/syntax/releases.atom",
+        "security": "https://github.com/ghostwriter/syntax/security/advisories/new"
     },
     "funding": [
         {
@@ -33,18 +34,19 @@
             "url": "https://github.com/sponsors/ghostwriter"
         }
     ],
+    "_comment": "#BlackLivesMatter",
     "require": {
-        "php": ">=8.2",
-        "ghostwriter/collection": "^1.4",
-        "ghostwriter/container": "^1.6",
-        "ghostwriter/event-dispatcher": "^2.0",
-        "ghostwriter/json": "^1.2",
-        "ghostwriter/option": "^1.5",
-        "ghostwriter/result": "^1.3"
+        "php": ">=8.3",
+        "ghostwriter/case-converter": "^1.0.0",
+        "ghostwriter/collection": "^2.0.0",
+        "ghostwriter/container": "^4.0.1",
+        "ghostwriter/event-dispatcher": "^5.0.1",
+        "ghostwriter/json": "^3.0.0",
+        "ghostwriter/option": "^1.5.1",
+        "ghostwriter/result": "^1.3.0"
     },
     "require-dev": {
-        "ghostwriter/coding-standard": "dev-main",
-        "ghostwriter/psalm-plugin": "^0 || ^0.2 || ^0.3 || ^1.0"
+        "ghostwriter/coding-standard": "dev-main"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
@@ -55,55 +57,66 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Ghostwriter\\Syntax\\Tests\\": "tests/"
+            "Tests\\": "tests"
         }
     },
     "bin": [
         "bin/syntax"
     ],
     "config": {
+        "allow-plugins": {
+            "ghostwriter/coding-standard": true
+        },
+        "classmap-authoritative": false,
         "discard-changes": true,
         "optimize-autoloader": true,
+        "platform": {
+            "php": "8.3.999"
+        },
         "preferred-install": "dist",
         "prepend-autoloader": true,
-        "sort-packages": true
+        "process-timeout": 5000,
+        "sort-packages": true,
+        "use-parent-dir": false
     },
     "scripts": {
-        "cache:clear": [
-            "rm -fr .cache"
-        ],
+        "bin_ecs": "ecs check --clear-cache --no-interaction",
+        "bin_infection": "infection --ansi --show-mutations --threads=max --min-msi=0 --min-covered-msi=0",
+        "bin_phive": "phive",
+        "bin_phpunit": "phpunit --do-not-cache-result --colors=always",
+        "bin_psalm": "psalm --no-cache",
+        "bin_rector": "rector process --no-ansi --clear-cache",
+        "cache:clear": "rm -rf ./.cache/*",
         "check": [
-            "@composer update",
-            "@cache:clear",
             "@composer validate",
-            "@composer-normalize",
+            "@ecs",
             "@test"
         ],
-        "composer-normalize": "vendor/ghostwriter/coding-standard/tools/composer-normalize --no-check-lock",
-        "infection": [
-            "@xdebug",
-            "vendor/ghostwriter/coding-standard/tools/infection --verbose"
-        ],
-        "phpbench": "vendor/ghostwriter/coding-standard/tools/phpbench run --report='extends:aggregate,cols:[benchmark,subject,revs,its,mem_peak,mode,rstdev]' --time-unit=milliseconds",
-        "phpunit": "vendor/ghostwriter/coding-standard/tools/phpunit --colors=always --do-not-cache-result",
-        "psalm": [
-            "@psalm:shepherd",
+        "dev": [
+            "@cache:clear",
+            "@check",
+            "@psalm:update",
             "@psalm:security",
             "@psalm:dry-run"
         ],
-        "psalm:baseline": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --no-diff --set-baseline=psalm-baseline.xml",
-        "psalm:dry-run": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --alter --allow-backwards-incompatible-changes=false --issues=all  --dry-run",
-        "psalm:fix": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache  --alter --allow-backwards-incompatible-changes=false --issues=MissingReturnType,InvalidReturnType,MismatchingDocblockParamType,LessSpecificReturnType,MissingClosureReturnType,UnnecessaryVarAnnotation,UnusedVariable,MissingParamType",
-        "psalm:missing": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --alter --allow-backwards-incompatible-changes=false --issues=MissingReturnType",
-        "psalm:security": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --no-diff --taint-analysis",
-        "psalm:shepherd": "vendor/ghostwriter/coding-standard/tools/psalm --no-cache --no-diff --shepherd --stats",
+        "ecs": "@bin_ecs --fix",
+        "git:submodule:update": "git submodule update --depth=1 --init --recursive --recommend-shallow --remote",
+        "infection": "@bin_infection",
+        "phpunit": "@bin_phpunit",
+        "phpunit:migrate": "@bin_phpunit --migrate-configuration",
+        "psalm": "@bin_psalm --show-info=true",
+        "psalm:alter": "@bin_psalm --alter --allow-backwards-incompatible-changes=false --safe-types",
+        "psalm:baseline": "@psalm --no-diff --set-baseline=psalm-baseline.xml",
+        "psalm:dry-run": "@psalm:alter --issues=all --dry-run",
+        "psalm:fix": "@psalm:alter --issues=UnnecessaryVarAnnotation,MissingPureAnnotation,MissingImmutableAnnotation",
+        "psalm:security": "@psalm --no-diff --taint-analysis",
+        "psalm:shepherd": "@psalm --no-diff --shepherd --stats",
+        "psalm:update": "@psalm --no-diff --update-baseline=psalm-baseline.xml",
+        "rector": "@bin_rector",
         "test": [
-            "@xdebug",
             "@phpunit",
-            "@psalm"
-        ],
-        "xdebug": [
-            "@putenv XDEBUG_MODE=coverage"
+            "@psalm:shepherd",
+            "@infection"
         ]
     }
 }
